<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.nukkitx</groupId>
    <artifactId>plexus-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>
    <name>Plexus Parent</name>
    <description>Next generation proxy for Minecraft: Bedrock Edition</description>
    <url>https://github.com/NukkitX/Plexus</url>
    <inceptionYear>2019</inceptionYear>

    <modules>
        <module>api</module>
        <module>proxy</module>
        <module>bootstrap</module>
    </modules>

    <licenses>
        <license>
            <name>GNU General Public License v3</name>
            <url>https://opensource.org/licenses/GPL-3.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>NukkitX</name>
        <url>https://github.com/NukkitX</url>
    </organization>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/NukkitX/Plexus/issues</url>
    </issueManagement>

    <ciManagement>
        <system>Jenkins</system>
        <url>https://ci.nukkitx.com/job/NukkitX/job/Plexus</url>
    </ciManagement>

    <scm>
        <connection>scm:git:https://github.com/NukkitX/Plexus.git</connection>
        <developerConnection>scm:git:git@github.com:NukkitX/Plexus.git</developerConnection>
        <url>https://github.com/NukkitX/Plexus</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>nukkitx-releases</name>
            <url>https://repo.nukkitx.com/release</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>nukkitx-snapshots</name>
            <url>https://repo.nukkitx.com/snapshot</url>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>HHmm-ddMMyyyy</maven.build.timestamp.format>

        <api.version>1.0.0-SNAPSHOT</api.version>
        <common.version>1.0.1-SNAPSHOT</common.version>
        <network.version>1.3.0-SNAPSHOT</network.version>
    </properties>

    <repositories>
        <repository>
            <id>nukkitx-repo-release</id>
            <url>https://repo.nukkitx.com/release/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>nukkitx-repo-snapshot</id>
            <url>https://repo.nukkitx.com/snapshot/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>clean package</defaultGoal>
    </build>
</project>